# CrossFury

./: Cargo.toml  README.md  config.toml  phemex_perp_products_cache.json
src/: config.rs  core.rs  cross_exchange.rs  error_handling.rs  exchange_types.rs  json_parser.rs  lib.rs  main.rs  symbol_mapper.rs  terminal_log.rs  token_lists.rs  utils.rs
src/network/: api_client.rs  batonex_websocket.rs  coincatch_websocket.rs  connection_manager.rs  hbit_websocket.rs  lbank_websocket.rs  message_processor.rs  mod.rs  tapbit_websocket.rs  websocket.rs  xtcom_websocket.rs
